Fixed small mistake in path of afile0 for fuel

--- a/conf/raceengineer.config
+++ b/conf/raceengineer.config
@@ -5,7 +5,7 @@ monitor =   (
                     reporttype  = "basic";
                     variable    = "SPageFilePhysics_fuel";
                     minormax    = "min";
-                    afile0      = "./sounds/voice/fuel/plenty_of_fuel/2.wav";
+                    afile0      = "voice/fuel/plenty_of_fuel/2.wav";
                     thresh      = [5.0, 10.0, 15.0, 20.0];
                     afiles      = ["voice/fuel/two_laps_fuel/2.wav", "voice/fuel/three_laps_fuel/2.wav",
                                     "voice/fuel/four_laps_fuel/2.wav", "voice/fuel/half_tank_warning/2.wav"];
